tests/errors/struct.rcm
struct a
	a: i32,
	b: i32,
	c: i32,

	pub fn new(self: *a) void {
		return self.a + self.b + self.c;
	}
}
